# comfyui-beeble-switchx

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  __init__.py  pyproject.toml  requirements.txt
beeble_switchx/: __init__.py  api.py  config.py  errors.py  flows.py  generation.py  masks.py  media.py  polling.py  runtime.py  upload.py
beeble_switchx/nodes/: __init__.py  switchx_image.py  switchx_video.py  test_account_info.py  test_download_image.py  test_download_video.py  test_dummy.py  test_export_mask.py  test_poll_job.py  test_start_image_generation.py  test_start_video_generation.py  test_upload_image.py  test_upload_video.py  test_wait_job.py
scripts/: test_account.py  test_upload_file.py
test_workflows/: 12_switchx_image_video_demo.json
